@@ -2,6 +2,7 @@
 
 ### 1.0.3
 * Moved all blog customizer options to LSX Blog Customizer plugin
+* Fix - Added filters to send the custom colours to custom selectors
 
 ### 1.0.2
 * Fix - Fixed all prefixes replaces (to_ > lsx_to_, TO_ > LSX_TO_)
